fix java 11 build and write exception on error